--- a/frondend/package.json
+++ b/frondend/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "axios": "^1.6.8",
+    "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
     "react-range": "^1.8.14",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
