--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ DB_PORT=27017
 DB_USER=
 DB_PASS=
 DB_NAME=terrenos_mama
-MONGODB_URI=mongodb+srv://mtorresg:Timmy123asd.@terrenos-isabel.s01umto.mongodb.net/?retryWrites=true&w=majority&appName=Terrenos-Isabel
+MONGODB_URI=mongodb+srv://mtorresg:Timmy123asd.terrenos-isabel.s01umto.mongodb.net/?retryWrites=true&w=majority&appName=Terrenos-Isabel
 PORT=3000
 JWT_SECRET=your_jwt_secret
 
