--- a/frondend/package.json
+++ b/frondend/package.json
@@ -23,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:prod": "serve -s build -l 3001"
   },
   "eslintConfig": {
     "extends": [
@@ -45,7 +46,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "http-server": "^14.1.1",
     "postcss": "^8.4.38",
+    "serve": "^14.2.3",
     "tailwindcss": "^3.4.3"
   }
 }
